--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">Smart Life</string>
+    <string name="app_name">Air Purifier</string>
+    <string moduleConfig="true" name="CodePushDeploymentKey">PytLtoZacRRbPRDM_o-fkx6a4zs4tFP0LTIpB</string>
+    <string name="appCenterCrashes_whenToSendCrashes" moduleConfig="true" translatable="false">DO_NOT_ASK_JAVASCRIPT</string>
+    <string name="appCenterAnalytics_whenToEnableAnalytics" moduleConfig="true" translatable="false">ALWAYS_SEND</string>
 </resources>
